Fix padding of grid elements
The fixed left was overlapping part of the right, so that checkboxes
didn't receive mouse events.

--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -29,7 +29,6 @@ a:visited {
 }
 
 .main-content {
-  padding: 0.5em 1em;
   margin-top: 2.5em;
 }
 
